<resources>
    <string name="app_name">Carded</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>
    <string name="logout">Logout</string>

</resources>
