<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="-60sp"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:text="@string/forgot_password"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="60sp"
        android:text="@string/registered_emailid"
        android:textColor="@color/white_greyish"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_verified_user_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/code"
        android:inputType="number"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <EditText
        android:id="@+id/updated_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>